// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with multiple expenses 1`] = `
<h1>
  Viewing 
  1
   
  expense
   totalling 
  $2.35
</h1>
`;

exports[`should render expense list with singular expense 1`] = `
<h1>
  Viewing 
  23
   
  expenses
   totalling 
  $235,592.90
</h1>
`;
